<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/settings_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<omark.hey.control.HeySetting
		android:id="@+id/setting_1"
        android:onClick="onSettingClick"
		android:layout_height="48dp"
		android:layout_width="fill_parent"
		android:tag="@string/lang27"/>

    <omark.hey.control.HeySetting
        android:id="@+id/setting_3"
        android:onClick="onSettingClick"
        android:layout_height="48dp"
        android:layout_width="fill_parent"
        android:tag="@string/lang29"/>
    
    <omark.hey.control.HeySetting
        android:id="@+id/setting_4"
        android:onClick="onSettingClick"
        android:layout_height="48dp"
        android:layout_width="fill_parent"
        android:tag="@string/lang22"/>
    
    <omark.hey.control.HeySetting
        android:id="@+id/setting_5"
        android:onClick="onSettingClick"
        android:layout_height="48dp"
        android:layout_width="fill_parent"
        android:tag="@string/lang12"/>
    
	<omark.hey.control.HeySetting
		android:id="@+id/setting_2"
        android:onClick="onSettingClick"
		android:layout_height="48dp"
		android:layout_width="fill_parent"
		android:tag="@string/lang25"
		android:alpha="0.9"/>

</LinearLayout>

